@@ -31,27 +31,27 @@ t/data/char1.pyx
 t/data/char2.pyx
 t/data/comment1.pyx
 t/data/comment2.pyx
-t/data/end_tag1.pyx
-t/data/example5.pyx
+t/data/element1.pyx
+t/data/element2.pyx
+t/data/element3.pyx
+t/data/element4.pyx
+t/data/element5.pyx
+t/data/end_element1.pyx
 t/data/instruction1.pyx
 t/data/instruction2.pyx
 t/data/parse.pyx
-t/data/start_tag1.pyx
-t/data/start_tag2.pyx
-t/data/start_tag3.pyx
-t/data/start_tag4.pyx
-t/data/start_tag5.pyx
-t/data/tag1.pyx
-t/data/tag2.pyx
-t/data/tag3.pyx
-t/data/tag4.pyx
+t/data/start_element1.pyx
+t/data/start_element2.pyx
+t/data/start_element3.pyx
+t/data/start_element4.pyx
+t/data/start_element5.pyx
 t/PYX-Format/01-use.t
 t/PYX-Format/02-version.t
 t/PYX-Parser/01-use.t
 t/PYX-Parser/02-version.t
 t/PYX-Parser/03-new.t
 t/PYX-Parser/04-parse_file.t
-t/PYX-Parser/05-rewrite.t
+t/PYX-Parser/05-parse_file-rewrite.t
 t/PYX/01-use.t
 t/PYX/02-version.t
 t/PYX/03-char.t
