@@ -1,3 +1,0 @@
-(tag
-Apar val\nval
-)tag
